--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="mySlides fade">
               <!-- <div class="numbertext">1 / 3</div> -->
               <img src="assets/wather-1.png" style="width:100%; height: 290px;">
-              <div class="text">Weather Forcase</div>
+              <div class="text">Weather Forcast</div>
             </div>
             
             <div class="mySlides fade">
