--- a/fish-haven.html
+++ b/fish-haven.html
@@ -14,7 +14,7 @@
   <nav>
       <div class="log">
         <img class="colimage" src="assets/logo.png" style="width: 80px;" alt="logo"/>
-          <!-- <h4>Owien Weather</h4> -->
+        <h6>Owien Weather</h6>
       </div>
       <ul class="nav-links">
           <li><a href="index.html">Home</a></li>
@@ -38,6 +38,10 @@
   </main>
 
   <footer>
+    <p>Tel: (39)3233111
+      Email: info@owienweather.com
+      Social network: Facebook and Instagram
+  </p>
     <p>© 2021 | Ogunniyi Owamamwen | Weather Forecast</p>
     <p>Last Updated 9/10/2021 10:54</p>
 </footer>
