--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@
 </main>
 
 <footer>
+    <p>Tel: (39)3233111
+        Email: info@owienweather.com
+        Social network: Facebook and Instagram
+    </p>
     <p>© 2021 | Ogunniyi Owamamwen | Weather Forecast</p>
     <p>Last Updated 9/10/2021 10:54</p>
 </footer>
